--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -22,7 +22,8 @@ services:
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
-    
+    ports:
+      - "3001:3001"
     links:
       - mongo
 
@@ -31,4 +32,6 @@ services:
     restart: unless-stopped
     volumes:
       - /data/db
+    ports:
+      - "27017:27017"
  
